Inset Faces Thickness & Depth Do Not Use Scene Units (i.e. Imperial) #46900

Closed
opened 2015-11-30 17:34:13 +01:00 by Doug Cox · 13 comments

System Information
Windows 10 / GeForce GTX 560 Ti

Blender Version
Blender 2.76b

This confused me for a while, but the the Thickness and Depth type-ins for the Inset Faces tool do not use the scene's unit settings when working in Imperial units.

  • Set the scene units to "Imperial"
  • Create a cube 1'x1'x1'.
  • Use the Inset Faces Tool (press "i" or select from the Tools panel).
  • Type in a Thickness value or Depth value.
  • Not the value is in meters still.

It would be extremely handy if these type-ins behaved similar to the Extrude tool -- meaning that they displayed in the scene's units. This way I could easily create an inset face by say 1" -- very useful for us crazy imperial people trying to use Blender for woodworking.

**System Information** Windows 10 / GeForce GTX 560 Ti **Blender Version** Blender 2.76b This confused me for a while, but the the Thickness and Depth type-ins for the Inset Faces tool do **not** use the scene's unit settings when working in Imperial units. - Set the scene units to "Imperial" - Create a cube 1'x1'x1'. - Use the Inset Faces Tool (press "i" or select from the Tools panel). - Type in a **Thickness** value or **Depth** value. - Not the value is in meters still. It would be **extremely** handy if these type-ins behaved similar to the Extrude tool -- meaning that they displayed in the scene's units. This way I could easily create an inset face by say 1" -- very useful for us crazy imperial people trying to use Blender for woodworking.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ziflin

Added subscriber: @ziflin

Added subscriber: @mont29

Added subscriber: @mont29

Cannot confirm that, neither with latest master nor with official 2.76b release, in Imperial units when I inset and type 1, I get 1' (1 foot), as expected. Linux here, but would not expect any OS bias on this area. Are you sure you are using official 2.76b release from http://download.blender.org/release/Blender2.76/ ?

Cannot confirm that, neither with latest master nor with official 2.76b release, in Imperial units when I inset and type `1`, I get `1'` (1 foot), as expected. Linux here, but would not expect any OS bias on this area. Are you sure you are using official 2.76b release from http://download.blender.org/release/Blender2.76/ ?
Author

Thanks for the quick response.

I'm enclosing a test scene and screenshot. The only other thing that I have done is to adjust the Grid scale and divisions in order to get a minor grid line every inch and a major one every 12". The cube was created as 1' x 1' x 1'.

Note that the Thickness/Depth type-ins do not show the unit type like the Extrude type-in. And to get 1" I had to use 0.0254 for the thickness.

blender-inset-faces.png

Test.blend

Thanks for the quick response. I'm enclosing a test scene and screenshot. The only other thing that I have done is to adjust the Grid scale and divisions in order to get a minor grid line every inch and a major one every 12". The cube was created as 1' x 1' x 1'. Note that the Thickness/Depth type-ins do not show the unit type like the Extrude type-in. And to get 1" I had to use 0.0254 for the thickness. ![blender-inset-faces.png](https://archive.blender.org/developer/F261666/blender-inset-faces.png) [Test.blend](https://archive.blender.org/developer/F261668/Test.blend)
Author

I also just noticed that the bottom quick-type-in (sorry don't know the name) that is displayed under the 3d window when the "i" key is pressed is not working properly either. If I had previously done an inset using the panel entry on the left (highlighted in the screenshot above), when I click a new face and press "i" it defaults to 0.0254 and looks correct in the 3d window (except for the original bug of having to use metric values). But if I begin typing 0.0254 (as shown in the quick-type-in below the 3d window) it is no longer the correct thickness when viewed in the 3d window (it is much smaller).

I am also unable to type in units such as 1" into the lower type-in. Is this a separate bug? (It applies to extrude and other hotkey based actions I assume).

I also just noticed that the bottom quick-type-in (sorry don't know the name) that is displayed under the 3d window when the "i" key is pressed is not working properly either. If I had previously done an inset using the panel entry on the left (highlighted in the screenshot above), when I click a new face and press "i" it defaults to 0.0254 and looks correct in the 3d window (except for the original bug of having to use metric values). But if I begin typing 0.0254 (as shown in the quick-type-in below the 3d window) it is no longer the correct thickness when viewed in the 3d window (it is much smaller). I am also unable to type in units such as **1"** into the lower type-in. Is this a separate bug? (It applies to extrude and other hotkey based actions I assume).
Author

One other thing that may have affected this was having Applied Scale. Without doing that on a cube with arbitrary dimensions, I was not able to get the same inset thickness all the way around the face.
So:

  • Add/Mesh/Cube
  • 1'x1'x1' for dimensions
  • Apply / Scale
  • Select a Face
  • Inset Face
    • Thickness of 0.0254 now required for 1"
One other thing that may have affected this was having Applied Scale. Without doing that on a cube with arbitrary dimensions, I was not able to get the same inset thickness all the way around the face. So: - Add/Mesh/Cube - 1'x1'x1' for dimensions - Apply / Scale - Select a Face - Inset Face - Thickness of 0.0254 now required for 1"

Oh, I thought you were talking about the direct type-in in 3DView’s header bar… This one is working perfectly OK, to enable units typing here you need to switch the active (edited) setting to 'advanced' mode (using * key e.g.), also allows you to do some simple operations etc.

Can confirm the issue in the operator redo panel, will fix.

Oh, I thought you were talking about the direct type-in in 3DView’s header bar… This one is working perfectly OK, to enable units typing here you need to switch the active (edited) setting to 'advanced' mode (using `*` key e.g.), also allows you to do some simple operations etc. Can confirm the issue in the operator redo panel, will fix.
Bastien Montagne self-assigned this 2015-12-01 00:04:07 +01:00
Author

Thanks for looking into it. Sorry I'm new to Blender, how do you switch it to Advanced mode? I can't seem to find the right thing to search for in the docs and pressing "*" doesn't work? (Maybe because I don't have a numpad?) Thanks again!

Thanks for looking into it. Sorry I'm new to Blender, how do you switch it to Advanced mode? I can't seem to find the right thing to search for in the docs and pressing "*" doesn't work? (Maybe because I don't have a numpad?) Thanks again!
Author

I think I found it, assuming advanced mode is normally = ? Is there a setting to make advanced mode the 'default' mode? Or is that = key needed to allow other keys to be used in that quick-mode?

I think I found it, assuming advanced mode is normally `=` ? Is there a setting to make advanced mode the 'default' mode? Or is that `=` key needed to allow other keys to be used in that quick-mode?

Yep, = is fallback when you do not have direct access to * on your keyboard (which is case of german ones iirc - or vice-versa). And no, no way to change this behavior, you always have to type the key to switch to advanced mode.

Yep, `=` is fallback when you do not have direct access to `*` on your keyboard (which is case of german ones iirc - or vice-versa). And no, no way to change this behavior, you always have to type the key to switch to advanced mode.

This issue was referenced by b29ee36f6a

This issue was referenced by b29ee36f6ad1246d8c48aadc0992d76a2c598a0e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46900
No description provided.