Fix T46900: Inset Faces Thickness & Depth Do Not Use Scene Units (i.e. Imperial).

Was the case of several Mesh operators actually (and probably others, but cannot check
everything). Added `RNA_def_property_float_distance` helper, avoids having to
set PROP_DISTANCE subtype explicitly each time...